--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 	// security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
