--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '11'
+	sourceCompatibility = '17'
 }
 
 configurations {
@@ -26,6 +26,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// SWAGGER
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.0'
 
 	// jpa
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
